--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"fabpot/goutte": "~2.0"
+		"fabpot/goutte": "~2.0",
+		"jyggen/curl": "4.0.*@dev"
 	},
 	"autoload": {
 		"classmap": [
